--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".activity.SignupActivity"
             android:label="@string/title_activity_signup" >
         </activity>
+        <activity
+            android:name=".activity.WorldWonderActivity"
+            android:label="@string/title_activity_world_wonder" >
+        </activity>
     </application>
 
 </manifest>
